feat: adicionando possibilidade de endpoint para criptografar com cahve aleatória e outro endpoint com chave propria passada no body
