# docs/swagger.json
@@ -9,7 +9,41 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/criptografar": {
+        "/criptografar-com-chave-aleatoria": {
+            "post": {
+                "description": "Aplica a cifra de Vernam ao texto fornecido com chave aleatória.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "criptografia"
+                ],
+                "summary": "Criptografar com chave aleatória",
+                "parameters": [
+                    {
+                        "description": "Texto e chave",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CriptografiaChaveAleatoriaRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CriptografiaChaveAleatoriaResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/criptografar-com-chave-propria": {
             "post": {
                 "description": "Aplica a cifra de Vernam ao texto fornecido com a chave informada.",
                 "consumes": [
@@ -21,11 +55,7 @@
                 "tags": [
                     "criptografia"
                 ],
-<<<<<<< HEAD
-                "summary": "Criptografar mensagem usando Cifra de Vernam",
-=======
-                "summary": "Criptografa uma mensagem",
->>>>>>> 954bccafba7996c3b4efb809c5ea7e968869aac6
+                "summary": "Criptografar com sua chave",
                 "parameters": [
                     {
                         "description": "Texto e chave",
@@ -33,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.MensagemRequest"
+                            "$ref": "#/definitions/models.CriptoDescriptoRequest"
                         }
                     }
                 ],
@@ -41,7 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MensagemResponse"
+                            "$ref": "#/definitions/models.CriptoDescriptoResponse"
                         }
                     }
                 }
@@ -59,11 +89,7 @@
                 "tags": [
                     "descriptografia"
                 ],
-<<<<<<< HEAD
                 "summary": "Descriptografar mensagem com cifra de vernan",
-=======
-                "summary": "Descriptografa uma mensagem",
->>>>>>> 954bccafba7996c3b4efb809c5ea7e968869aac6
                 "parameters": [
                     {
                         "description": "Texto e chave",
@@ -71,7 +97,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.MensagemRequest"
+                            "$ref": "#/definitions/models.CriptoDescriptoRequest"
                         }
                     }
                 ],
@@ -79,7 +105,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MensagemResponse"
+                            "$ref": "#/definitions/models.CriptoDescriptoResponse"
                         }
                     }
                 }
@@ -87,7 +113,7 @@
         }
     },
     "definitions": {
-        "models.MensagemRequest": {
+        "models.CriptoDescriptoRequest": {
             "type": "object",
             "required": [
                 "chave",
@@ -102,10 +128,32 @@
                 }
             }
         },
-        "models.MensagemResponse": {
+        "models.CriptoDescriptoResponse": {
             "type": "object",
             "properties": {
                 "resultado": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CriptografiaChaveAleatoriaRequest": {
+            "type": "object",
+            "required": [
+                "texto"
+            ],
+            "properties": {
+                "texto": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CriptografiaChaveAleatoriaResponse": {
+            "type": "object",
+            "properties": {
+                "chave_usada": {
+                    "type": "string"
+                },
+                "texto_criptografado": {
                     "type": "string"
                 }
             }
