# models/CriptoDescriptoRequest.go
@@ -1,6 +1,6 @@
 package models
 
-type MensagemRequest struct {
+type CriptoDescriptoRequest struct {
 	Texto string `json:"texto" binding:"required"`
 	Chave string `json:"chave" binding:"required"`
 }
