# models/CriptografiaChaveAleatoriaRequest.go
@@ -1,0 +1,5 @@
+package models
+
+type CriptografiaChaveAleatoriaRequest struct {
+	Texto string `json:"texto" binding:"required"`
+}
